<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qiuyongchen.windweibo.UI.MainActivity">

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </TabWidget>

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_tab_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/btn_style_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_home_white_18dp"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_at"
            style="@style/btn_style_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_whatshot_white_18dp"
            android:text="@string/at" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/btn_style_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_mail_outline_white_18dp"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/btn_style_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_settings_white_18dp"
            android:text="@string/setting" />
    </RadioGroup>
</TabHost>
