<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e7f3f7">


    <ImageView
        android:id="@+id/img_wb_item_head"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_face_black_36dp" />

    <!-- 右边框架 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">


        <!-- 用户名称、新浪认证部分 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <!-- 用户名称 -->
            <TextView
                android:id="@+id/txt_wb_item_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weibo_status_user_name"
                android:textColor="#424d54"
                android:textSize="20sp" />

            <!-- 新浪认证 -->
            <ImageView
                android:id="@+id/img_wb_item_V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v" />


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <!-- 发布时间 -->
                <TextView
                    android:id="@+id/txt_wb_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weibo_status_time"
                    android:textColor="#efa608"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>


        <!-- 微博正文内容 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- 微博正文内容 -->
            <TextView
                android:id="@+id/txt_wb_item_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/weibo_status_content"
                android:textColor="#6b717b"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/img_wb_item_content_pic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/img_user_head" />

        </LinearLayout>


        <!-- 微博对话内容 -->
        <LinearLayout
            android:id="@+id/layout_retweeted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/popup"
            android:orientation="vertical"
            android:visibility="gone">


            <!-- 微博正文内容 -->
            <TextView
                android:id="@+id/txt_wb_item_subcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/weibo_status_content"
                android:textColor="#6b717b"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/img_wb_item_content_subpic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/img_user_head"
                android:visibility="gone" />


        </LinearLayout>


        <!-- 微博来源部分 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">


            <!-- 用户名称 -->
            <TextView
                android:id="@+id/txt_wb_item_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weibo_status_item_from"
                android:textColor="#9ba0aa"
                android:textSize="10sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_wb_item_redirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_redirect"
                    android:text="10"
                    android:textColor="#9ba0aa"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txt_wb_item_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawableLeft="@drawable/ic_comment"
                    android:text="100"
                    android:textColor="#9ba0aa"
                    android:textSize="10sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
